Add styles for search dropdown and menu dropdown

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -5,7 +5,7 @@
 @import "setting/setting";
 @import "plugins/woo";
 @import "plugins/wpforms";
-@import "plugins/wpforms";
+@import "plugins/fibosearch";
 
 
 @import "template/category";
