--- a/assets/css/template/_other_pages.scss
+++ b/assets/css/template/_other_pages.scss
@@ -364,7 +364,7 @@ a.button.is-outline > i[class^="icon-"]
 
 .ux-menu-link__link:hover,
 .post-title:hover a,
-.menu-item:hover a{
+.menu-item:hover> a{
   color:#FF5C00 !important;
 }
 
