--- a/assets/css/template/_other_pages.scss
+++ b/assets/css/template/_other_pages.scss
@@ -601,11 +601,8 @@ li.html.custom.html_topbar_left div.selectron23,
 }
 
 
-
-.post-type-archive-product .shop-page-title, .post-type-archive-product #main,
-/*.tax-product_cat .shop-page-title,*/
+.post-type-archive-product #main,
 .tax-product_cat #main,
-/*.archive .shop-page-title,*/
 .archive #main{
   background: #F8F8F8;
 }
