--- a/assets/css/plugins/woo/_product.scss
+++ b/assets/css/plugins/woo/_product.scss
@@ -32,31 +32,39 @@
     padding-top: 100px;
     padding-bottom: 20px
   }
-  .product-title {
-    color: #292929;
-    font-family: var(--font-outfit);
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal;
-    margin-bottom: 42px;
-  }
-  .product-short-description{
-    font-family: var(--font-outfit);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.2em;
-    text-align: left;
-    color: #343434;
-    padding-bottom: 44px;
-    margin-bottom: 44px;
-    border-bottom: 1px solid #DBDBDB;
-  }
-  form{
-    &.cart{
-      display: flex;
-      align-items: center;
+
+  .product-summary {
+    .product-title {
+      color: #292929;
+      font-family: var(--font-outfit);
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: normal;
+      margin-bottom: 42px;
     }
+
+    .product-short-description {
+      font-family: var(--font-outfit);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.2em;
+      text-align: left;
+      color: #343434;
+      padding-bottom: 44px;
+      margin-bottom: 44px;
+      border-bottom: 1px solid #DBDBDB;
+    }
+
+    form {
+      &.cart {
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+  .product-section{
+    border: none!important;
   }
   .product-section-boxed{
     .panel {
